src/main/docker/ubuntu-toolkit.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    run: ubuntu-toolkit
  name: ubuntu-toolkit
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: ubuntu-toolkit
  template:
    metadata:
      labels:
        run: ubuntu-toolkit
    spec:
      containers:
      - args:
        - while true; do sleep 30; done;
        command:
        - /bin/bash
        - -c
        - --
        image: ubuntu:xenial
        imagePullPolicy: IfNotPresent
        name: ubuntu-toolkit
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
