src/main/docker/k8sDeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ranjeeta_spring
  name: ranjeeta_spring-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ranjeeta_spring
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 20%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ranjeeta_spring
    spec:
      containers:
      - image: registry.ng.bluemix.net/ranjeeta_spring/ranjeeta_spring:latest
        imagePullPolicy: Always #IfNotPresent
        name: ranjeeta_spring
        ports:
        - containerPort: 8080
          name: http 
          protocol: TCP
        # volumeMounts:
        # - mountPath: application.yaml
        #   name: config
        #   subPath: server.xml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      # volumes:
      # - configMap:
      #     defaultMode: 420
      #     items:
      #     - key: application.yaml
      #       path: application.yaml
      #     name: si-api-cm
      #   name: config

---

apiVersion: v1
kind: Service
metadata:
  name: ranjeeta_spring-service
spec:
  selector:
    app: ranjeeta_spring
  ports:
   - protocol: TCP
     targetPort: http
     port: 80
