src/main/docker/k8sIngress-private.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ranjeeta-spring-ingress
  annotations:
    ingress.bluemix.net/ALB-ID: "private-cr3270956cbe4147c392dcc54c2f3af335-alb1"
spec:
  rules:
  - host: ranjeeta-spring.9.218.8.32.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-rs
          servicePort: 80
