src/main/docker/k8sIngress-public.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: si-api-ingress-public
  annotations:
    ingress.bluemix.net/ALB-ID: "public-crb2470a2853a34eb39f6b356881c3650b-alb1"
spec:
  rules:
  - host: ranjeeta-spring.dsw-im-cloud-public-dev.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-rs
          servicePort: 80
